This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Incorrect error handling in SSLContext.load_dh_params()
Type: behavior Stage: resolved
Components: Extension Modules, SSL Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: ZackerySpytz, benjamin.peterson, christian.heimes, miss-islington
Priority: normal Keywords: patch

Created on 2020-07-08 03:55 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 21385 merged ZackerySpytz, 2020-07-08 03:57
PR 21387 merged miss-islington, 2020-07-08 04:22
PR 21388 merged miss-islington, 2020-07-08 04:22
PR 21389 merged miss-islington, 2020-07-08 04:22
Messages (5)
msg373271 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2020-07-08 03:55
If the SSL_CTX_set_tmp_dh() call fails, SSLContext.load_dh_params() returns
None with a live exception.  It should return NULL in this case.
msg373274 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2020-07-08 04:22
New changeset aebc0495572c5bb85d2bd97d27cf93ab038b5a6a by Zackery Spytz in branch 'master':
closes bpo-41235: Fix the error handling in SSLContext.load_dh_params() (GH-21385)
https://github.com/python/cpython/commit/aebc0495572c5bb85d2bd97d27cf93ab038b5a6a
msg373275 - (view) Author: miss-islington (miss-islington) Date: 2020-07-08 04:37
New changeset c8b599ff0a4e4782e97e353a20146d3570845dbc by Miss Islington (bot) in branch '3.8':
closes bpo-41235: Fix the error handling in SSLContext.load_dh_params() (GH-21385)
https://github.com/python/cpython/commit/c8b599ff0a4e4782e97e353a20146d3570845dbc
msg373276 - (view) Author: miss-islington (miss-islington) Date: 2020-07-08 04:40
New changeset 1d1c5743400bdf384ec83eb6ba5b39a355d121e3 by Miss Islington (bot) in branch '3.9':
closes bpo-41235: Fix the error handling in SSLContext.load_dh_params() (GH-21385)
https://github.com/python/cpython/commit/1d1c5743400bdf384ec83eb6ba5b39a355d121e3
msg373277 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2020-07-08 04:55
New changeset c8c818b0d73680516d5841597b705a1feeb42113 by Miss Islington (bot) in branch '3.7':
closes bpo-41235: Fix the error handling in SSLContext.load_dh_params() (GH-21389)
https://github.com/python/cpython/commit/c8c818b0d73680516d5841597b705a1feeb42113
History
Date User Action Args
2022-04-11 14:59:33adminsetgithub: 85407
2020-07-08 04:55:43benjamin.petersonsetmessages: + msg373277
2020-07-08 04:40:21miss-islingtonsetmessages: + msg373276
2020-07-08 04:37:57miss-islingtonsetmessages: + msg373275
2020-07-08 04:22:39miss-islingtonsetpull_requests: + pull_request20535
2020-07-08 04:22:31miss-islingtonsetpull_requests: + pull_request20534
2020-07-08 04:22:22miss-islingtonsetnosy: + miss-islington

pull_requests: + pull_request20533
2020-07-08 04:22:01benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg373274

resolution: fixed
stage: patch review -> resolved
2020-07-08 03:57:34ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request20530
2020-07-08 03:55:24ZackerySpytzcreate