closes bpo-41235: Fix the error handling in SSLContext.load_dh_params() (GH-21385)

(cherry picked from commit aebc0495572c5bb85d2bd97d27cf93ab038b5a6a)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>